@@ -31,7 +31,10 @@ import org.apache.cassandra.config.Config.DiskFailurePolicy;
 import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.db.commitlog.CommitLog;
 import org.apache.cassandra.db.commitlog.CommitLogSegment;
+import org.apache.cassandra.db.partitions.PartitionUpdate;
+import org.apache.cassandra.db.rows.BTreeRow;
 import org.apache.cassandra.db.Keyspace;
+import org.apache.cassandra.db.Mutation;
 import org.apache.cassandra.gms.Gossiper;
 import org.apache.cassandra.io.FSWriteError;
 import org.apache.cassandra.utils.JVMStabilityInspector;
@@ -53,7 +56,33 @@ public class OutOfSpaceTest extends CQLTester
         try (Closeable c = Util.markDirectoriesUnwriteable(getCurrentColumnFamilyStore()))
         {
             DatabaseDescriptor.setDiskFailurePolicy(DiskFailurePolicy.die);
-            flushAndExpectError();
+            flushAndExpectError(FSWriteError.class);
+            Assert.assertTrue(killerForTests.wasKilled());
+            Assert.assertFalse(killerForTests.wasKilledQuietly()); //only killed quietly on startup failure
+        }
+        finally
+        {
+            DatabaseDescriptor.setDiskFailurePolicy(oldPolicy);
+            JVMStabilityInspector.replaceKiller(originalKiller);
+        }
+    }
+
+    @Test
+    public void testFlushAssertionErrorDie() throws Throwable
+    {
+        makeTable();
+
+        KillerForTests killerForTests = new KillerForTests();
+        JVMStabilityInspector.Killer originalKiller = JVMStabilityInspector.replaceKiller(killerForTests);
+        DiskFailurePolicy oldPolicy = DatabaseDescriptor.getDiskFailurePolicy();
+        try
+        {
+            DatabaseDescriptor.setDiskFailurePolicy(DiskFailurePolicy.ignore);  // we should always die on assertion errors
+            Mutation m = new Mutation(PartitionUpdate.singleRowUpdate(currentTableMetadata(),
+                                                                      Util.dk("broken"),
+                                                                      BTreeRow.emptyRow(Util.clustering(currentTableMetadata().comparator, "col"))));
+            m.applyUnsafe();
+            flushAndExpectError(AssertionError.class);
             Assert.assertTrue(killerForTests.wasKilled());
             Assert.assertFalse(killerForTests.wasKilledQuietly()); //only killed quietly on startup failure
         }
@@ -73,7 +102,7 @@ public class OutOfSpaceTest extends CQLTester
         try (Closeable c = Util.markDirectoriesUnwriteable(getCurrentColumnFamilyStore()))
         {
             DatabaseDescriptor.setDiskFailurePolicy(DiskFailurePolicy.stop);
-            flushAndExpectError();
+            flushAndExpectError(FSWriteError.class);
             Assert.assertFalse(Gossiper.instance.isEnabled());
         }
         finally
@@ -91,7 +120,7 @@ public class OutOfSpaceTest extends CQLTester
         try (Closeable c = Util.markDirectoriesUnwriteable(getCurrentColumnFamilyStore()))
         {
             DatabaseDescriptor.setDiskFailurePolicy(DiskFailurePolicy.ignore);
-            flushAndExpectError();
+            flushAndExpectError(FSWriteError.class);
         }
         finally
         {
@@ -111,17 +140,17 @@ public class OutOfSpaceTest extends CQLTester
             execute("INSERT INTO %s (a, b, c) VALUES ('key', 'column" + i + "', null);");
     }
 
-    public void flushAndExpectError() throws InterruptedException, ExecutionException
+    public void flushAndExpectError(Class<? extends Throwable> errorClass) throws InterruptedException, ExecutionException
     {
         try
         {
             Keyspace.open(KEYSPACE).getColumnFamilyStore(currentTable()).forceFlush().get();
-            fail("FSWriteError expected.");
+            fail(errorClass.getSimpleName() + " expected.");
         }
         catch (ExecutionException e)
         {
             // Correct path.
-            Assert.assertTrue(e.getCause() instanceof FSWriteError);
+            Assert.assertTrue(errorClass.isInstance(e.getCause()));
         }
 
         // Make sure commit log wasn't discarded.
